--- a/InstaStay/Areas/Identity/Views/Account/Login.cshtml
+++ b/InstaStay/Areas/Identity/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <div class="card shadow">
+        <div class="card shadow ">
             <div class="card-body p-4">
                 <h4 class="card-title text-center mb-3">
                     <i class="fas fa-sign-in-alt"></i> Welcome Back
@@ -18,7 +18,7 @@
                         <!-- Validation summary will appear here -->
                     </div>
                      
-                    <div class="form-group mb-3">
+                    <div class="form-group mb-3 bg-gradient">
                         <label asp-for="Name" class="form-label">
                             <i class="fas fa-user"></i> Username
                         </label>
