--- a/InstaStay/Areas/Identity/Views/Account/Register.cshtml
+++ b/InstaStay/Areas/Identity/Views/Account/Register.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="row justify-content-center">
+<div class="row justify-content-center ">
     <div class="col-md-6">
         <div class="card shadow">
-            <div class="card-body p-4">
+            <div class="card-body p-4 bg-gradient">
                 <h4 class="card-title text-center mb-3">Create Your Account</h4>
 
                 <!-- Social Media Register Options -->
