Room Post Action

--- a/InstaStay/Areas/HotelManager/Views/ManageHotel/ShowAllHotels.cshtml
+++ b/InstaStay/Areas/HotelManager/Views/ManageHotel/ShowAllHotels.cshtml
@@ -51,7 +51,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="/HotelManager/ManageHotel/AddRoom/@item.Id">
+                                        <a class="dropdown-item" href="/HotelManager/ManageHotel/AddRoom?HotelId=@item.Id">
                                             <i class="fas fa-plus me-2"></i>Add Room
                                         </a>
                                     </li>
